add model gltf + camera + 2 lights

--- a/src/index.html
+++ b/src/index.html
@@ -3,10 +3,13 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>ThreeJS Starter</title>
+    <title>DAYTONA SP3</title>
   </head>
   <body>
-    <canvas class="webgl"></canvas>
-    <!-- <img src="assets/images/your_image.png" alt="" /> -->
+    <main>
+      <h1 class="title">DAYTONA</h1>
+      <canvas class="webgl"></canvas>
+      <!-- <img src="assets/images/black_logo.png" alt="" /> -->
+    </main>
   </body>
 </html>
