button change position model 3D

--- a/src/index.html
+++ b/src/index.html
@@ -8,6 +8,14 @@
   <body>
     <main>
       <h1 class="title">DAYTONA</h1>
+     
+      <div class="interaction">
+        <button id="front">Front</button>
+        <button id="back">Back</button>
+        <button id="left">Left</button>
+        <button id="right">Right</button>
+      </div>
+
       <canvas class="webgl"></canvas>
       <!-- <img src="assets/images/black_logo.png" alt="" /> -->
     </main>
