--- a/src/index.html
+++ b/src/index.html
@@ -7,17 +7,73 @@
   </head>
   <body>
     <main>
-      <h1 class="title">DAYTONA</h1>
-     
-      <div class="interaction">
-        <button id="front">Front</button>
-        <button id="back">Back</button>
-        <button id="left">Left</button>
-        <button id="right">Right</button>
+      <header>
+        <img
+          class="logo"
+          src="assets/images/black_logo.png"
+          alt="logo Ferrari"
+        />
+      </header>
+      <div class="container_title">
+        <h1 class="title">DAYTONA</h1>
+        <h2>SP<span>3</span></h2>
       </div>
 
       <canvas class="webgl"></canvas>
-      <!-- <img src="assets/images/black_logo.png" alt="" /> -->
+      <img
+        class="points__background"
+        src="assets/images/points_background.png"
+        alt="background points"
+      />
+
+      <div class="bottom__side">
+        <div class="interaction">
+          <button id="front">Front</button>
+          <button id="back">Back</button>
+          <button id="left">Left</button>
+          <button id="right">Right</button>
+          <button id="top">Top</button>
+        </div>
+        <div class="container__bottom">
+          <div class="button__sound">
+            <div class="line line1"></div>
+            <div class="line line2"></div>
+            <div class="line line3"></div>
+          </div>
+          <img
+            class="arrow__bottom"
+            src="assets/images/arrow_bottom.svg"
+            alt=""
+          />
+          <p class="ame__text">UNE <span>ÂME</span> DE PROTOTYPE SPORTIF</p>
+        </div>
+      </div>
+
+      <div class="left__side">
+        <div class="statistics">
+          <div class="stats">
+            <h3>2.8s</h3>
+            <p>0-100km/h</p>
+          </div>
+          <div class="stats">
+            <h3>697</h3>
+            <p>NM</p>
+          </div>
+          <div class="stats">
+            <h3>829</h3>
+            <p>HP</p>
+          </div>
+        </div>
+      </div>
+
+
+      <div class="right__side">
+        <p class="right__side__text">
+          Ferrari Daytona <span>SP3</span>
+        </p>
+        </div>
+      </div>
+
     </main>
   </body>
 </html>
