--- a/src/index.html
+++ b/src/index.html
@@ -7,6 +7,18 @@
   </head>
   <body>
     <main>
+      <div class="loader">
+        <img
+          class="logo__loader black"
+          src="assets/images/white_logo.png"
+          alt=""
+        />
+        <img
+          class="logo__loader red"
+          src="assets/images/red_logo2.png"
+          alt=""
+        />
+      </div>
       <header>
         <a href="index.html">
           <img
