--- a/src/index.html
+++ b/src/index.html
@@ -306,6 +306,6 @@
     </p>
     <p>Technology used : <span>Three.js / Gsap</span></p>
   </footer>
-  <script src="app.js"></script>
-  <script src="loaderAndSound.js"></script>
+  <script src="assets/js/app.js"></script>
+  <script src="assets/js/loaderAndSound.js"></script>
 </html>
