--- a/src/index.html
+++ b/src/index.html
@@ -31,6 +31,13 @@
           src="assets/images/red_logo2.png"
           alt=""
         />
+
+        <div class="lds-ellipsis">
+          <div></div>
+          <div></div>
+          <div></div>
+          <div></div>
+        </div>
       </div>
       <header>
         <a href="index.html">
